[project]
name = "whentomeet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==24.10.0",
    "fastapi>=0.128.0",
    "orjson==3.10.12",
    "passlib>=1.7.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[tool.black]
line-length = 110 

[dependency-groups]
dev = [
    "mypy==1.13.0",
    "ruff==0.8.2",
]

[tool.ruff]
target-version = 'py313'

[tool.mypy]
plugins = ["pydantic.mypy"]
python-version = 'py313'
strict = true

[tool.uv.workspace]
members = [
    "whentomeet",
]
